[project]
name = "msds460-final"
version = "0.1.0"
description = ""
authors = [
    {name = "Chan Lee",email = "cglee.toqo@gmail.com"}
]
requires-python = ">=3.11"
dependencies = [
    "pandas (>=3.0.3,<4.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"


[tool.poetry]
packages = [
    { include = "simulation", from = "src" }
]

[tool.poetry.scripts]
simulation = "simulation.run_simulation:main"
